--- a/css/tienda-styles.css
+++ b/css/tienda-styles.css
@@ -74,9 +74,9 @@ body {
 .img-logotipo {
     /* width: 230px; */
     width: 15%;
-    height: 140%;
+    height: 150%;
     position: relative;
-    bottom: 15px;
+    bottom: 0px;
     margin: 0 0 0 3.5em;
     
 }
@@ -94,6 +94,7 @@ body {
     margin-top: 2.5em;
     margin-left: 0em;
     margin-right: 4.06em;
+    z-index: 2000;
 }
 
 .link-content a {
@@ -126,7 +127,7 @@ header nav .hr-header {
  width: 95%;
  margin: 0 auto;
  display: flex;
- justify-content: space-between;
+ justify-content: center;
  
 }
 .tittle-content{
@@ -137,6 +138,7 @@ header nav .hr-header {
 .tittle-content h2{
     font-size: 17px;
     color: var(--dark-pink);
+    
 }
 
 
@@ -147,12 +149,15 @@ header nav .hr-header {
     flex-direction: column;
     justify-content: flex-start;
     margin: 70px 0 0 0;
+
+    
 }
 
 .product-import-1{
     width: 100%;
     display: flex;
     margin: 0 0 30px 10px;
+
 
 }
 .product-import-1 .text{
@@ -180,7 +185,7 @@ header nav .hr-header {
     .products-main{
         width: 100%;
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         flex-wrap: wrap;
     }
 
@@ -189,18 +194,21 @@ header nav .hr-header {
     }
 
     .content-img a{
-        opacity: 0;
+        /* display: none; */
         width: 100%;
-        height: 100%;
+        height: 40px;
         z-index: 1;
-        background: #fff;
+        background: rgba(255, 221, 221, 0);
         position: absolute;
-        /* top: 80%; */
+        top: 79%;
+        /* opacity: 0; */
+        color: rgba(255, 255, 240, 0);
+        padding: 10px;
     }
 
     .content-img a:hover{
         position: absolute;
-        top: 80%;
+        top: 79%;
         background: rgba(230, 78, 107, .8);
         z-index: 1000;
         width: 100%;
@@ -209,10 +217,12 @@ header nav .hr-header {
         text-decoration: none;
         text-align: center;
         color: #fff;
-        padding: 10px 0 0 0;
-        opacity: 100;
-        transition: .5s ease-out;
-        transition-property: opacity, top;
+        padding: 10px;
+        transition: .4s ease-in;
+        transition-property: all;
+        
+        
+        /* opacity: 100; */
 
     }
     
@@ -221,6 +231,14 @@ header nav .hr-header {
         height: 200px;
         /* padding-bottom: 10px; */
         }
+        .img-link{
+            background: rgba(126, 252, 0, 0);
+            width: 100%;
+            height: 160px;
+            position: absolute;
+            z-index: 1;
+        }
+
     
     .products-1{
         text-align: center;  
@@ -297,3 +315,54 @@ header nav .hr-header {
         
 
     }
+
+    .content-change-page{
+        display: flex;
+        justify-content: center;
+        margin: 0 0 50px 0;
+        width: 50%;
+        position: relative;
+        left: 35%;
+
+        
+    }
+        .content-change-page .change-page{
+            width: 30px;
+            height: 30px;
+            color: #000;
+            margin: 0 10px 0 10px;
+            text-align: center;
+            border-radius: 30px;
+            padding: 5px;
+            font-size: 19px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+            .first{
+            background: var(--dark-pink);
+            width: 30px;
+            height: 30px;
+            color: #000;
+            margin: 0 10px 0 10px;
+            text-align: center;
+            border-radius: 30px;
+            padding: 5px;
+            font-size: 19px;
+            text-decoration: none;
+            font-weight: bold;
+
+            }
+                .first:hover{
+                    color: var(--pink);
+                }
+            .content-change-page .change-page:hover{
+                color: var(--dark-pink);
+            }
+
+
+        .content-change-page i{
+            padding: 4.5px 0 0 0;
+            font-size: 22px;
+            color: var(--light-gray);
+            margin: 0 13px 0 13px;
+        }
