se agrego mas productos en la seccion de la tienda

--- a/css/tienda-styles.css
+++ b/css/tienda-styles.css
@@ -185,7 +185,8 @@ header nav .hr-header {
     .products-main{
         width: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
+        flex-direction: row;
         flex-wrap: wrap;
     }
 
