--- a/css/styles.css
+++ b/css/styles.css
@@ -40,25 +40,91 @@ body {
 
 /* HEADER */
 
-.header-content {
-    background: var(--light-pink);
-    position: sticky;
-    top: -1px;
+header{
+    display: flex;
+    flex-direction: row;
+
     width: 100%;
-    height: 95px;    
-    z-index: 1000;
-    margin-bottom: 2px;
+    /* height: 125px; */
+    padding: 25px 100px;
+
+    z-index: 999;
+    /* position: fixed; */
+
+
 }
 
-nav{
+header .content-menu{
+    display: flex;
+    flex-direction: row;
 
 }
+
+
+header .logo-menu{
+    display: flex;
+    align-content: center;
+    background: #fff2f4;
+    /* background: #000; */
+    width: 100%;
+    /* align-content: flex-start; */
+
+}
+
+header .logo-menu img{
+    height: 75px;
+    margin: auto;
+
+    display: flex;
+    justify-content: flex-start;
+    
+}
+
+header .menu-bar{
+    display: none;
+}
+
+header nav{
+    margin: auto 0;
+    width: 100%;
+    display: flex;
+    /* justify-content: flex-end; */
+    background: #fff2f4;
+    /* background: #000; */
+}
+
+
+header nav a{
+    text-decoration: none;
+    color: var(--light-gray);
+    font-size: 16px;
+    font-family: var(--font-tittle);
+
+    margin: 0 15px;
+}
+header nav a:hover{
+    color: var(--dark-pink);
+    transition: all .2s;
+    
+    text-decoration: underline 3px var(--dark-pink);
+    
+}
+
+
+
+
+/*  */
     
 
 .small-paragraph {
     background: var(--black);
     text-align: center;
     color: #fff;
+
+    z-index: 9999;
+    width: 100%; 
+    display: block;
+    position: fixed;
     
 }
 
@@ -69,67 +135,8 @@ nav{
     color: #fff;
 }
 
-.content {
-    display: flex;
-    justify-content: space-between;
-    height: 70px;
 
-}
 
-.img-logotipo {
-    /* width: 230px; */
-    width: 15%;
-    height: 140%;
-    position: relative;
-    bottom: 15px;
-    margin: 0 0 0 3.5em;
-    
-}
-
-.tittle-page {
-    position: relative;
-    right: 5.8em;
-    top: 1.5em;
-    font-size: 1.95em;
-    font-family: 'Lobster Two', normal;
-    color: var(--dark-pink);
-}
-
-.link-content {
-    margin-top: 2.5em;
-    margin-left: 0em;
-    margin-right: 4.06em;
-    width: 100%;
-}
-
-.btn-menu-rp-content{
-    display: none;
-}
-
-.link-content a {
-    font-family: var(--font-tittle);
-    text-decoration: none;
-    font-size: 1em;
-    padding: 1.25em;
-    border-radius: 0.31em;
-    margin-right: 0.62;
-    margin-left: 0.62em;
-    color: #000;
-}
-
-.link-content a:hover,
-.link-content a .activo{
-    color: var(--dark-pink);
-    transition-duration: 0.3s;
-}
-
-header nav .hr-header {
-    display: none;
-    height: 0.06em;
-    border: 0;
-    color: pink;
-    background-color: var(--dark-pink);
-}
 
 
 /* MAIN CONTENT OF WEBSITE */
@@ -710,81 +717,74 @@ footer .content-fr-1 p{
 
     @media screen and (max-width: 992px) {
 
-        .header-content{
+        header{
+            display: flex;
+            flex-direction: column;
+
+            width: 100%;
+            height: 100%;
+            padding: 0;
+        }
+
+        header .btn-bar-style{
+
+        }
+
+        header .content-menu{
+           /* display: none; */
+           display: flex;
+           flex-direction: column;
+            
+        }
+
+        header .logo-menu{
+            padding: 50px 0 25px 0;
+            margin: 0;
+        }
+
+        header nav{
+            background: #fff2f4;
+            height: 100%;
+            margin: -1px 0 0 0;
+            padding: 15% 0 0 0;
+            display: flex;
+            flex-direction: column;
+
+            position: relative;
+            /* left: -100%; */
+        }
+
+        header nav a{
+            margin: 30px 0;
+            border-bottom: 1px solid rgba(114, 114, 114,.1);
+            text-align: center;
 
 
         }
 
-        nav .content{
 
-        }
-
-        .btn-menu-rp-content{
+        header .menu-bar{
             display: block;
-            position: absolute;
-            right: 0;
-            top: 0;
+            /* float: left; */
+            position: relative;
+            
         }
-        .btn-menu-rp-content a{
-            text-decoration: none;
-        }
-        .btn-menu-rp-content i{
-            display: block;
-            color: #6dcd6b;
-        }
+            header .menu-bar i{
+                position: absolute;
+                left: 0;
+                margin: 60px 0 0 30px;
+            }
 
-        body {
-            /* width: 100%; */
 
-        }
+/*  */
+
+
 
         .small-paragraph{
             display: none;
         }
         
-        nav .img-logotipo{
-            margin: auto;
-            padding: 0;
-            width: 20%;
-            height: 135px;
-
-        }
-
-        nav .link-content{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-
-            background: var(--pink);
-            width: 80%;
-            height: 100%;
-            position: fixed;
-            top: 0;
-            margin: 0;
-            /* left: -100%; */
-
-            z-index: 9999;
-            
-        }
-        nav .link-content a{
-            
-            text-align: center;
-            border-bottom: 1px solid rgba(175, 175, 175, .2);
-        }
-            nav .link-content a:hover{
-                background: #f5c5cc;
-                width: 100%;
-                border-radius: 1px;
-                margin: 0 auto;
-            }
-
-            .btn-menu-rp-content i{
-                font-size: 35px;
-                margin: 100% 0 0 0;
-                position: relative;
-                right: 60%;
-            }
-
+       
         .slider-one .main-cover{
             width: 100%;
             height: 450px;
@@ -872,11 +872,7 @@ footer .content-fr-1 p{
             margin: 20px auto;
         }
 
-        nav .img-logotipo{
-            height: 135px;
-            margin: auto;
-        }
-
+       
         .slider-one .main-cover{
             height: 320px;
         }
@@ -888,18 +884,7 @@ footer .content-fr-1 p{
       }
 
       @media screen and (max-width: 728px){
-        nav .img-logotipo{
-            display: flex;
-            margin: auto;
-            width: 20%;
-            height: 125px;
-        }
-
-        nav .img-logotipo{
-            width: 23%;
-            height: 123px;
-        }
-
+       
         footer .content-fr-1 img{
             width: 32%;
             height: 73px;
@@ -908,12 +893,7 @@ footer .content-fr-1 p{
     }
 
     @media screen and (max-width: 610px){
-        nav .img-logotipo{
-            width: 26%;
-            height: 115px;
-        }
-
-        .products-main .products-exclusive-1{
+               .products-main .products-exclusive-1{
             width: 60%;
             font-size: 13px;
         } 
@@ -933,10 +913,6 @@ footer .content-fr-1 p{
     }
 
     @media screen and (max-width: 508px){
-        nav .img-logotipo{
-            width: 30%;
-            height: 117px;
-        }
         
         .products-main .products-exclusive-1{
             width: 75%;
@@ -955,10 +931,6 @@ footer .content-fr-1 p{
 
     @media screen and (max-width: 422px){
 
-        nav .img-logotipo{
-            width: 35%;
-            height: 115px;
-        }
 
         .products-main .products-exclusive-1{
             width: 80%;
@@ -971,12 +943,6 @@ footer .content-fr-1 p{
     }
 
     @media screen and (max-width: 322px){
-
-        nav .img-logotipo{
-            width: 40%;
-            height: 115px;
-        }
-
         .products-main .products-exclusive-1{
             width: 80%;
         }
@@ -1017,11 +983,6 @@ footer .content-fr-1 p{
     }
 
     @media screen and (max-width: 279px){
-        nav .img-logotipo{
-            width: 50%;
-            height: 115px;
-        }
-
         .products-main .products-exclusive-1{
             width: 85%;
         }
@@ -1031,10 +992,6 @@ footer .content-fr-1 p{
     }
 
     @media screen and (max-width: 279px){
-        nav .img-logotipo{
-            width: 50%;
-            height: 100px;
-        }
 
         .products-main .products-exclusive-1{
             width: 85%;
