--- a/css/styles.css
+++ b/css/styles.css
@@ -45,39 +45,38 @@ header{
     flex-direction: row;
 
     width: 100%;
-    /* height: 125px; */
-    padding: 25px 100px;
-
+    /* background: rgb(146, 9, 123); */
+    background: var(--pink);
     z-index: 999;
-    /* position: fixed; */
-
+    position: fixed;
+    position: static;
 
 }
 
 header .content-menu{
+    width: 100%;
+    margin: 18.8px 0 0 0;
     display: flex;
     flex-direction: row;
-
 }
 
 
 header .logo-menu{
     display: flex;
     align-content: center;
-    background: #fff2f4;
-    /* background: #000; */
     width: 100%;
-    /* align-content: flex-start; */
+}
 
+header .logo-menu{
+    width: 100%;
+    margin: 0 0 0 8%;
+    display: flex;
+    justify-content: flex-start;
 }
 
 header .logo-menu img{
-    height: 75px;
-    margin: auto;
-
-    display: flex;
-    justify-content: flex-start;
-    
+    height: 100px;
+    padding: 10px 0;
 }
 
 header .menu-bar{
@@ -88,9 +87,7 @@ header nav{
     margin: auto 0;
     width: 100%;
     display: flex;
-    /* justify-content: flex-end; */
-    background: #fff2f4;
-    /* background: #000; */
+
 }
 
 
@@ -123,9 +120,8 @@ header nav a:hover{
 
     z-index: 9999;
     width: 100%; 
-    display: block;
     position: fixed;
-    
+    float: none;
 }
 
 .small-span a {
@@ -611,7 +607,8 @@ footer{
 }
 
 footer img{
-    width: 15%;
+    /* width: 15%; */
+    height: 75px;
     margin: 0 auto 15px auto;
 }
 
@@ -719,14 +716,17 @@ footer .content-fr-1 p{
 
         header{
             display: flex;
-            flex-direction: column;
-
-            width: 100%;
-            height: 100%;
-            padding: 0;
             position: fixed;
-
-
+            background: #fff2f4;
+            flex-direction: row-reverse;
+            justify-content: space-between;
+            width: 100%;
+            padding: 0;
+        }
+        header .logo-menu img{
+            height: 60px;
+            margin: 0 0 0 15%;
+            
         }
 
         header .btn-bar-style{
@@ -734,35 +734,31 @@ footer .content-fr-1 p{
         }
 
         header .content-menu{
-           /* display: none; */
            display: flex;
            flex-direction: column;
-           z-index: 2;
+           justify-content: space-between;
+           z-index: 999;
 
             
         }
 
         header .logo-menu{
-            padding: 10px 0 20px 0;
-            margin: 0;
-            z-index: 2;
-            position: fixed;
+            width: 100%;
+            padding: 15px 0 15px 0;
+            z-index: 999;
+            display: flex;
+            justify-content: flex-start;
         }
 
         header nav{
-            width: 80%;
-            /* background: #fff2f4; */
-            background: #242323;
-            width: 90%;
-            height: 100vh;
-            margin: -1px 0 0 0;
-            padding: 15% 0 0 0;
+            padding: 35% 0 0 0;
             display: flex;
             flex-direction: column;
-            position: fixed;
-            position: relative;
-            /* left: 0%; */
-
+            width:80%;
+		    height:100%;
+		    left: -100%;
+		    margin:0;
+		    position: fixed;
             border-radius: 0 0 10px 0;
         }
 
@@ -777,19 +773,20 @@ footer .content-fr-1 p{
 
 
         header .menu-bar{
+            width: 100%;
             display: block;
             /* float: left; */
             position: relative;
-            background-attachment: fixed;
+            /* background-attachment: fixed; */
             
 
             
         }
             header .menu-bar i{
                 position: absolute;
-                left: 0;
-                margin: 30px 0 0 30px;
-                z-index: 999;
+                right: 0;
+                margin: 25px 30px 0;
+                z-index: 9999;
 
             }
 
@@ -852,7 +849,9 @@ footer .content-fr-1 p{
             margin: 50px auto 15px auto;
 
         }
-
+        footer img{
+            height: 75px;
+        }
         footer .content-fr-2{
             display: none;
         }
